space to the right fixed on small mobile devices

--- a/index.css
+++ b/index.css
@@ -181,6 +181,7 @@
 	position: relative;
 	left:50px;
 	top: 15px;
+	width: 50px;
 }
 
 .footertitle {
